# DataRAFT

./: .gitignore  CMakeLists.txt  DOCS.md  License.rtf  README.md  main.cpp  wix_patch.xml
.github/workflows/: release.yml
extras/: MDProtocol.h  localshare.cpp  webrtc_client.cpp  webrtc_client.h
include/: file_receiver.h  file_sender.h  globals.h  protocol.h  receiver.h  sender.h  webrtc_client.h
include/helpers/: config_manager.h  file_helper.h  globals.h  ui_manager.h
src/: main.cpp
src/helper_impt/: file_helper.cpp  stream_compression.cpp  stream_decryptor.cpp  stream_encryptor.cpp  stream_hasher.cpp
src/helper_impt/config_manager_impl/: config_manager.cpp
src/helper_impt/file_helper_impl/: file_helper.cpp  stream_compressor.cpp  stream_decompresser.cpp  stream_decompressor.cpp  stream_decryptor.cpp  stream_encryptor.cpp  stream_hasher.cpp
src/helper_impt/raft_globals_impl/: raft_globals.cpp
src/helper_impt/ui_manager_imp/: ui_manager.cpp
src/impl/: receiver.cpp  sender.cpp  webrtc_client.cpp
src/impl/receiver/: handle_password_auth.cpp  process_block_footer.cpp  process_data_chunk.cpp  process_file_eof.cpp  process_manifest.cpp  process_metadata.cpp  receiver.cpp  start_receiving.cpp
src/impl/sender/: flush_network_queue.cpp  load_next_batch_file.cpp  producer.cpp  sender.cpp  start_sending.cpp
src/include/: file_receiver.h  file_transfer.h  protocol.h
src/include/helpers/: file_helper.h
src/raft_globals_impl/: raft_globals.cpp
